@@ -14,12 +14,14 @@ import java.util.ArrayList;
 public class SQLPoiDAO implements CRUDInterfacePoi {
     private static Connection connection;
     private static SQLPoiDAO instance;
+
     private SQLPoiDAO() throws Exception {
         connection = JDBCSingle.getConnection();
     }
+
     public static SQLPoiDAO getInstance() throws Exception {
-        if(instance == null){
-            instance =  new SQLPoiDAO();
+        if (instance == null) {
+            instance = new SQLPoiDAO();
         }
         return instance;
     }
@@ -32,19 +34,19 @@ public class SQLPoiDAO implements CRUDInterfacePoi {
     @Override
     public boolean addPoi(Poi poi) throws SQLException {
         Poi poi1 = listOneById(poi.getPoiId());
-        if(poi1 == null){
-            String sql = "INSERT INTO jaap (PoiID,latitude,longitude,city,country,description,updateDate) VALUES (?, ?, ?, ?, ?, ? ,?)";
+        if (poi1 == null) {
+            String sql = "INSERT INTO jaap (PoiID, latitude, longitude, city, country, description, updateDate) VALUES (?, ?, ?, ?, ?, ?, ?)";
             PreparedStatement statement = connection.prepareStatement(sql);
-            statement.setInt(1,poi.getPoiId());
-            if(poi.getLatitude() == null){
-                statement.setNull(2,java.sql.Types.DOUBLE);
+            statement.setInt(1, poi.getPoiId());
+            if (poi.getLatitude() == null) {
+                statement.setNull(2, java.sql.Types.DOUBLE);
             } else {
-                statement.setDouble(2,poi.getLatitude());
+                statement.setDouble(2, poi.getLatitude());
             }
-            if(poi.getLongitude() == null){
-                statement.setNull(3,java.sql.Types.DOUBLE);
+            if (poi.getLongitude() == null) {
+                statement.setNull(3, java.sql.Types.DOUBLE);
             } else {
-                statement.setDouble(3,poi.getLongitude());
+                statement.setDouble(3, poi.getLongitude());
             }
             if (poi.getCity() == null || poi.getCity().isEmpty()) {
                 statement.setNull(4, java.sql.Types.VARCHAR);
@@ -75,7 +77,7 @@ public class SQLPoiDAO implements CRUDInterfacePoi {
 
     @Override
     public ArrayList<Poi> listAll() throws SQLException {
-        String sql = "SELECT * FROM jaap order by PoiID";
+        String sql = "SELECT * FROM jaap ORDER BY PoiID";
         PreparedStatement statement = connection.prepareStatement(sql);
         ResultSet res = statement.executeQuery();
         ArrayList<Poi> pois = getResult(res);
@@ -85,24 +87,24 @@ public class SQLPoiDAO implements CRUDInterfacePoi {
 
     @Override
     public Poi listOneById(int id) throws SQLException {
-        String sql = "SELECT * FROM jaap WHERE PoiID = (?)";
+        String sql = "SELECT * FROM jaap WHERE PoiID = ?";
         PreparedStatement statement = connection.prepareStatement(sql);
-        statement.setInt(1,id);
+        statement.setInt(1, id);
         ResultSet res = statement.executeQuery();
         ArrayList<Poi> poi = getResult(res);
-        if(poi.isEmpty()){
+        statement.close();
+        if (poi.isEmpty()) {
             return null;
         }
-        statement.close();
-        return poi.getFirst();
+        return poi.get(0);
     }
 
     @Override
     public ArrayList<Poi> listByIDRange(int start, int end) throws SQLException {
-        String sql = "SELECT * FROM jaap WHERE PoiID BETWEEN ? AND ?;";
+        String sql = "SELECT * FROM jaap WHERE PoiID BETWEEN ? AND ?";
         PreparedStatement statement = connection.prepareStatement(sql);
-        statement.setInt(1,start);
-        statement.setInt(2,end);
+        statement.setInt(1, start);
+        statement.setInt(2, end);
         ResultSet res = statement.executeQuery();
         ArrayList<Poi> pois = getResult(res);
         statement.close();
@@ -110,15 +112,21 @@ public class SQLPoiDAO implements CRUDInterfacePoi {
     }
 
     @Override
-    public ArrayList<Poi> listByMonthModification(int month) {
-        return null;
+    public ArrayList<Poi> listByMonthModification(int month) throws SQLException {
+        String sql = "SELECT * FROM jaap WHERE MONTH(updateDate) = ?";
+        PreparedStatement statement = connection.prepareStatement(sql);
+        statement.setInt(1, month);
+        ResultSet res = statement.executeQuery();
+        ArrayList<Poi> pois = getResult(res);
+        statement.close();
+        return pois;
     }
 
     @Override
     public ArrayList<Poi> listByCity(String city) throws SQLException {
-        String sql = "SELECT * FROM jaap WHERE author LIKE ?;";
+        String sql = "SELECT * FROM jaap WHERE city LIKE ?";
         PreparedStatement statement = connection.prepareStatement(sql);
-        statement.setString(1,"%" + city + "%");
+        statement.setString(1, "%" + city + "%");
         ResultSet res = statement.executeQuery();
         ArrayList<Poi> pois = getResult(res);
         statement.close();
@@ -126,52 +134,153 @@ public class SQLPoiDAO implements CRUDInterfacePoi {
     }
 
     @Override
-    public ArrayList<Poi> listByCountry(String country) {
-        return null;
+    public ArrayList<Poi> listByCountry(String country) throws SQLException {
+        String sql = "SELECT * FROM jaap WHERE country LIKE ?";
+        PreparedStatement statement = connection.prepareStatement(sql);
+        statement.setString(1, "%" + country + "%");
+        ResultSet res = statement.executeQuery();
+        ArrayList<Poi> pois = getResult(res);
+        statement.close();
+        return pois;
     }
 
     @Override
-    public boolean updatePoiByID(Poi poi) {
+    public boolean updatePoiByID(Poi poi) throws SQLException {
+        Poi existingPoi = listOneById(poi.getPoiId());
+        if (existingPoi != null) {
+            String sql = "UPDATE jaap SET latitude = ?, longitude = ?, city = ?, country = ?, description = ?, updateDate = ? WHERE PoiID = ?";
+            PreparedStatement statement = connection.prepareStatement(sql);
+            if (poi.getLatitude() == null) {
+                statement.setNull(1, java.sql.Types.DOUBLE);
+            } else {
+                statement.setDouble(1, poi.getLatitude());
+            }
+            if (poi.getLongitude() == null) {
+                statement.setNull(2, java.sql.Types.DOUBLE);
+            } else {
+                statement.setDouble(2, poi.getLongitude());
+            }
+            if (poi.getCity() == null || poi.getCity().isEmpty()) {
+                statement.setNull(3, java.sql.Types.VARCHAR);
+            } else {
+                statement.setString(3, poi.getCity());
+            }
+            if (poi.getCountry() == null || poi.getCountry().isEmpty()) {
+                statement.setNull(4, java.sql.Types.VARCHAR);
+            } else {
+                statement.setString(4, poi.getCountry());
+            }
+            if (poi.getDescription() == null || poi.getDescription().isEmpty()) {
+                statement.setNull(5, java.sql.Types.VARCHAR);
+            } else {
+                statement.setString(5, poi.getDescription());
+            }
+            if (poi.getUpdateDate() == null) {
+                statement.setNull(6, java.sql.Types.DATE);
+            } else {
+                statement.setDate(6, Transformer.javaDateToSQLDate(poi.getUpdateDate()));
+            }
+            statement.setInt(7, poi.getPoiId());
+            statement.executeUpdate();
+            statement.close();
+            return true;
+        }
         return false;
     }
 
     @Override
     public int deleteAll(boolean confirm) throws SQLException {
         int rowsDeleted;
-        if(confirm){
-            String sql = "DELETE FROM jaap;";
+        if (confirm) {
+            String sql = "DELETE FROM jaap";
             PreparedStatement statement = connection.prepareStatement(sql);
             rowsDeleted = statement.executeUpdate();
             statement.close();
-        }else {
+        } else {
             rowsDeleted = listAll().size();
         }
         return rowsDeleted;
     }
 
+
     @Override
-    public Poi deletePoiByID(int id, boolean confirm) {
-        return null;
+    public Poi deletePoiByID(int id, boolean confirm) throws SQLException {
+        Poi poi = listOneById(id);
+        if (poi != null && confirm) {
+            String sql = "DELETE FROM jaap WHERE PoiID = ?";
+            PreparedStatement statement = connection.prepareStatement(sql);
+            statement.setInt(1, id);
+            statement.executeUpdate();
+            statement.close();
+        }
+        return poi;
     }
 
     @Override
-    public int deleteByIDRange(int start, int end, boolean confirm) {
+    public int deleteByIDRange(int start, int end, boolean confirm) throws SQLException {
+        if (confirm) {
+            String sql = "DELETE FROM jaap WHERE PoiID BETWEEN ? AND ?";
+            PreparedStatement statement = connection.prepareStatement(sql);
+            statement.setInt(1, start);
+            statement.setInt(2, end);
+            int rowsDeleted = statement.executeUpdate();
+            statement.close();
+            return rowsDeleted;
+        }
         return 0;
     }
 
     @Override
-    public int deleteByMonthModification(int month, boolean confirm) {
+    public int deleteByMonthModification(int month, boolean confirm) throws SQLException {
+        if (confirm) {
+            String sql = "DELETE FROM jaap WHERE MONTH(updateDate) = ?";
+            PreparedStatement statement = connection.prepareStatement(sql);
+            statement.setInt(1, month);
+            int rowsDeleted = statement.executeUpdate();
+            statement.close();
+            return rowsDeleted;
+        }
         return 0;
     }
 
     @Override
-    public int deleteByCity(String city, boolean confirm) {
+    public int deleteByCity(String city, boolean confirm) throws SQLException {
+        if (confirm) {
+            String sql = "DELETE FROM jaap WHERE city LIKE ?";
+            PreparedStatement statement = connection.prepareStatement(sql);
+            statement.setString(1, "%" + city + "%");
+            int rowsDeleted = statement.executeUpdate();
+            statement.close();
+            return rowsDeleted;
+        }
+        return listByCity(city).size();
+    }
+
+    @Override
+    public int deleteByCountry(String country, boolean confirm) throws SQLException {
+        if (confirm) {
+            String sql = "DELETE FROM jaap WHERE country LIKE ?";
+            PreparedStatement statement = connection.prepareStatement(sql);
+            statement.setString(1, "%" + country + "%");
+            int rowsDeleted = statement.executeUpdate();
+            statement.close();
+            return rowsDeleted;
+        }
         return 0;
     }
+
     private static ArrayList<Poi> getResult(ResultSet res) throws SQLException {
         ArrayList<Poi> pois = new ArrayList<>();
-        while (res.next()){
-            Poi poi = new Poi(res.getInt("PoiID"),res.getDouble("latitude"),res.getDouble("longitude"),res.getString("country"),res.getString("city"),res.getString("description"),res.getDate("updateDate"));
+        while (res.next()) {
+            Poi poi = new Poi(
+                    res.getInt("PoiID"),
+                    res.getDouble("latitude"),
+                    res.getDouble("longitude"),
+                    res.getString("country"),
+                    res.getString("city"),
+                    res.getString("description"),
+                    res.getDate("updateDate")
+            );
             pois.add(poi);
         }
         res.close();
